2.34.1:

2011-04-17  Murray Cumming  <murrayc@murrayc.com>

	Fix distcheck.

	* Makefile.am: Specify the full path to docbook-customisation.xsl,
	which is apparently necessary with the autotools that I have here.

2011-04-17  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with --enable-warnings=fatal.

	* configure.ac: Use -no-long-long to avoid an (apparently new) compiler
	warning about long long not being supported by C++98. glibmm already had
	this option.

2011-04-17  Murray Cumming  <murrayc@murrayc.com>

	Do not require mm-common during the tarball build.

	* configure.ac: Add a MM_CONFIG_DOCTOOL_DIR() call.

2.34.0:

2011-02-24  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with the changed linker behaviour on Ubuntu Natty.

	* Makefile.am: Link the examples to glibmm explicitly.

2.33.2:

2011-02-11  Murray Cumming  <murrayc@murrayc.com>

	Node::remove_child(): Fix a use of deleted memory

	* libxml++/nodes/node.cc:
	Use a temporary variable to avoid accessing the node C++ instance after we
	have deleted it. Valgrind foudn this.
	Also remove the comment about the libxml deleting our C++ instance via a
	callback, because we don't do that anymore.

2010-11-26  Murray Cumming  <murrayc@murrayc.com>

	Check some libxml function return values.

	* libxml++/document.cc: do_write_to_stream():
	* libxml++/schema.cc: set_document(): Check the results from
	xmlSchemaNewDocParserCtxt() and xmlSaveFormatFileTo().
	Bug #635846 (Markus Elfring).

2.33.1:

2010-11-14  Murray Cumming  <murrayc@murrayc.com>

	free_wrappers(): Fix crash.

	* libxml++/nodes/node.cc: free_wrappers(): Revert my change to check
	xmlNode::properties for all types, because the layout of some structs
	is apparently completely different (not really deriving fully), and this
	caused a crash in examples/sax_parser/.
	Added an explanatory comment.

2010-11-14  Murray Cumming  <murrayc@murrayc.com>

	Change the --enable-examples default to yes.
