@@ -20,4 +20,5 @@
 			</g>
 		</g>
 	</g>
+	<cdata_test><![CDATA[& is not protected here]]></cdata_test>
 </svg>
